# TP-GP

./: 48.csv  48_Industry_Portfolios 2.CSV  48_Industry_Portfolios.CSV  CB.ipynb  Portfolios.csv  README.md  pyproject.toml
