[tool.poetry]
name = "assignment10"
version = "0.1.1"
description = "Assignment 10 - MATH60207 HEC Montreal"
authors = ["Vincent Grégoire <vincent.gregoire@hec.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.0.0"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
jupyter = "^1.0.0"
pytest = "^7.4.4"
black = "^23.12.1"
scipy = "^1.11.4"
seaborn = "^0.13.1"
statsmodels = "^0.14.1"
linearmodels = "^5.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.5.2"
pandas-datareader = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
